syntax = "proto3";

package greet;
option go_package="greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

// UNARY //

message GreetRequest {
    Greeting greeting = 1;
}

message GreetingResponse {
    string result = 1;
}

// SERVER STREAM

message GreetManyTimeRequest {
    Greeting greeting = 1;
}

message GreetManyTimeResponse {
    string result = 1;
}

service GreetService{
    // unary
    rpc Greet(GreetRequest) returns (GreetingResponse) {};

    // server streaming
    rpc GreetManyTimes(GreetManyTimeRequest) returns (stream GreetManyTimeResponse) {};
}